_assets/css/index.scss
/*
  Customize US Web Design System SASS
  See all at designsystem.digital.gov/documentation/settings
*/

// Background image in the hero component
$theme-hero-image: asset_path("hero-background.jpg");

// Primary colors
$theme-color-primary-family: "blue";
$theme-color-primary-lightest: false;
$theme-color-primary-lighter: "blue-10";
$theme-color-primary-light: "blue-30";
$theme-color-primary:  "indigo-cool-70v";
$theme-color-primary-vivid: "blue-warm-60v";
$theme-color-primary-dark: "blue-warm-70v";
$theme-color-primary-darker: $theme-color-primary; //"blue-warm-80v";
$theme-color-primary-darkest: false;

// Secondary colors
$theme-color-secondary-family: "red";
$theme-color-secondary-lightest: false;
$theme-color-secondary-lighter: "red-cool-10";
$theme-color-secondary-light: "red-30";
$theme-color-secondary: "red-50v"; //"red-50";
$theme-color-secondary-vivid: "red-cool-50v";
$theme-color-secondary-dark: "red-60v";
$theme-color-secondary-darker: "red-70v";
$theme-color-secondary-darkest: false;

@import "uswds";


// TEMPLATE

body {
  /*  always show vertical scrollbar to prevent page jerk */
  overflow-y: scroll;
}

// header
.usa-header--extended .usa-navbar {
  margin:0;
  padding:0;
  height: auto;
  max-width: unset;
  border-style: none;
  background-color: color("primary");

  .usa-logo {
    margin:0;
    height:auto;
    line-height:0;

    img {
      max-height:65px;
      width: auto;
    }

    a:focus {
      outline: none;
    }
  }
}

// .usa-header--extended .usa-nav {
//   border-style: none;
// }

.usa-header--extended .usa-menu-btn {
  background-color: color("secondary");
  height: 65px;
}


// BODY

.usa-prose {

  p, ul li, ol li {
    max-width: unset;
  }
}

.usa-graphic-list__heading {
  a {
    color: unset;
    text-decoration: unset;
  }
}

// CONTENT

.usa-hero__callout .usa-button {
  background-color: color("secondary");
}

.usa-summary-box__body h4 {
  margin-top: 0;
  margin-bottom: 0;
}

// FOOTER

.usa-footer--slim .usa-footer__address {
  padding-left: 0;
  padding-right: 0;
}

.usa-footer__contact-info {
  a {
    text-decoration: underline;

    &:hover{
      color: color("primary");
    }
  }
}


// default mode hide banner
.usa-banner__content {
  display: hidden;
}

@media screen and (min-width: 640px) {
  .tablet\:width-1\/3 {
    width: 33%;
  }
  .tablet\:float-left {
    float: left;
  }
}

@media screen and (min-width: 640px) {
  .paginate-link {
    display: initial;
  }
  .paginate-button {
    display: none;
  }
}

@media screen and (max-width: 640px) {
  .paginate-link {
    display: none;
  }
  .paginate-button {
    display: block;
  }
}

